--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="bootstrap.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | 3-column preview card component</title>
+  <title>Frontend Mentor | 3-column preview card component tes test test</title>
 
 </head>
 
