--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       </div>
       <div class="paragraph">
         <p>
-          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-          or on your next road trip.
+          this should be changed for upload
         </p>
       </div>
       <div class="learn_more">
