--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="3 Column Preview Card for frontendmentor">
+  <meta name="keywords" content="Practice, html, css, bootstrap">
+  <meta name="author" content="Angus Munro">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="bootstrap.css">
@@ -17,66 +21,71 @@
 
 </head>
 
-<body>
 
-  <div class="main_container">
-    <div class="sedans">
-      <div class="icon">
-        <img src="images/icon-sedans.svg" alt="car_icon"/>
-      </div>
-      <div class="heading">
-        <h1>SEDANS</h1>
-      </div>
-      <div class="paragraph">
-        <p>
-          this should be changed for upload
-        </p>
-      </div>
-      <div class="learn_more">
-        <button type="button" name="button">Learn More</button>
-      </div>
-    </div>
-    <div class="suvs">
-      <div class="icon">
-        <img src="images/icon-suvs.svg" alt="car_icon"/>
-      </div>
-      <div class="heading">
-        <h1>SUVS</h1>
-      </div>
-      <div class="paragraph">
-        <p>
-          Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-          and off-road adventures.
-        </p>
-      </div>
-      <div class="learn_more">
-        <button type="button" name="button">Learn More</button>
-      </div>
-    </div>
-    <div class="luxury">
-      <div class="icon">
-        <img src="images/icon-luxury.svg" alt="car_icon"/>
-      </div>
-      <div class="heading">
-        <h1>LUXURY</h1>
-      </div>
-      <div class="paragraph">
-        <p>
-          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-          rental and arrive in style.
-        </p>
-      </div>
-      <div class="learn_more">
-        <button type="button" name="button">Learn More</button>
-      </div>
-    </div>
-  </div>
+<main>
 
-  <!-- Footer -->
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <body>
+
+    <section class="main_container">
+      <div class="sedans">
+        <div class="icon">
+          <img src="images/icon-sedans.svg" alt="car_icon" />
+        </div>
+        <div class="heading">
+          <h1>SEDANS</h1>
+        </div>
+        <div class="paragraph">
+          <p>
+            Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+            or on your next road trip.
+          </p>
+        </div>
+        <div class="learn_more">
+          <button type="button" name="button">Learn More</button>
+        </div>
+      </div>
+      <div class="suvs">
+        <div class="icon">
+          <img src="images/icon-suvs.svg" alt="car_icon" />
+        </div>
+        <div class="heading">
+          <h1>SUVS</h1>
+        </div>
+        <div class="paragraph">
+          <p>
+            Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+            and off-road adventures.
+          </p>
+        </div>
+        <div class="learn_more">
+          <button type="button" name="button">Learn More</button>
+        </div>
+      </div>
+      <div class="luxury">
+        <div class="icon">
+          <img src="images/icon-luxury.svg" alt="car_icon" />
+        </div>
+        <div class="heading">
+          <h1>LUXURY</h1>
+        </div>
+        <div class="paragraph">
+          <p>
+            Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+            rental and arrive in style.
+          </p>
+        </div>
+        <div class="learn_more">
+          <button type="button" name="button">Learn More</button>
+        </div>
+      </div>
+    </section>
+</main>
+
+<!-- Footer -->
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="#">Your Name Here</a>.
+</div>
 </body>
 
 </html>
