--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="icon">
           <img src="images/icon-sedans.svg" alt="car_icon" />
         </div>
+        <!-- First Column -->
         <div class="heading">
           <h1>SEDANS</h1>
         </div>
@@ -41,13 +42,14 @@
           </p>
         </div>
         <div class="learn_more">
-          <button type="button" name="button">Learn More</button>
+          <button type="button" class="btn btn-light">Learn More</button>
         </div>
       </div>
       <div class="suvs">
         <div class="icon">
           <img src="images/icon-suvs.svg" alt="car_icon" />
         </div>
+         <!-- Second Column -->
         <div class="heading">
           <h1>SUVS</h1>
         </div>
@@ -58,13 +60,14 @@
           </p>
         </div>
         <div class="learn_more">
-          <button type="button" name="button">Learn More</button>
+          <button type="button" class="btn btn-light">Learn More</button>
         </div>
       </div>
       <div class="luxury">
         <div class="icon">
           <img src="images/icon-luxury.svg" alt="car_icon" />
         </div>
+        <!-- Third Column -->
         <div class="heading">
           <h1>LUXURY</h1>
         </div>
@@ -75,7 +78,7 @@
           </p>
         </div>
         <div class="learn_more">
-          <button type="button" name="button">Learn More</button>
+          <button type="button" class="btn btn-light">Learn More</button>
         </div>
       </div>
     </section>
